fix parcel build

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <main></main>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
